--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -5,20 +5,27 @@
 
 \begin{document}
 
-	\subsection{Vorwort}
-	Ein Trainingsplan besteht aus unterschiedlichen Phasen - je nach Trainingsziel (Muskelaufbau, Maximalkraft, Kraftausdauer (=Gesundheit)) unterschiedlich. Jede Trainingsphase besitzt einen empfohlenenen RM-Wert (0\%-100\%), mit welchem der Benutzer "uben kann. Alle empfohlenen Werte (Satzpausen, RM-Wert, Anzahl der Trainingstage,...) sind jediglich eine Option für den Benutzer und können auch frei gewählt werden.
-	\subsection{Was ist Was?}
+	\subsection{Begriffserklärung}
 	Eine \grqq{}Wiederholung\grqq{} ist das 1-malige Ausüben einer Übung. 
 	\newline
-	Ein \grqq{}Satz\grqq{} ist die Abschließung aller Übungen und ausgeführten Wiederholungen.
-	100\% RM =(Repetition Maximum = Maximalwiederholung) ist die Ausf"uhren einer bestimmten "Uung zu einem bestimmten Gewicht, welches bei der "Ubung genau 1 Mal bew"altigt werden kann:
+	Ein \grqq{}Satz\grqq{} umfasst alle Übungen und ausgeführten Wiederholungen.
+	100\% RM =(Repetition Maximum = Maximalwiederholung) ist die Ausf"uhrung einer bestimmten "Uung zu einem bestimmten Gewicht, welches bei der "Ubung genau ein Mal bew"altigt werden kann:
 	\[\%RM=\frac{100*Trainingsgewicht}{102.78-(2.78*Wiederholungen)}\]
 	Wenn man sich also das Trainingsgewicht ausrechnen will, mit dem man eine "Ubung ausführen soll, geht man wie folgt vor (Vorgeschlagener \%RM-Wert und Wiederholungen sind angegeben):
 	\[Trainingsgewicht=\frac{\%RM*(102.78-(2,78*Wiederholungen))}{100}\]
-	Mit dem errechneten Gewicht führt man nun die jeweilige zugeordnete "Ubung aus. Da man bei konsequenten Training die Kraft steigt, sollte man auch immer das Trainingsgewicht erhöhen. Um maximalen Fortschritt zu erziehlen, ist es empfohlen, die Wiederholungen gleich bleiben zu lassen. Der Benutzer testet selbst wieviel Gewicht er mit den Wiederholungen schafft, die Änderung der Gewichts wird von ihm festgehalten, um positive Entwicklungen feststellen zu k"onnen. 
+	Mit dem errechneten Gewicht führt man nun die jeweilige zugeordnete "Ubung aus. Da  bei konsequentem Training die Kraft steigt, sollte man auch immer das Trainingsgewicht erhöhen. Um maximalen Fortschritt zu erziehlen, wird empfohlen, die Wiederholungen gleich bleiben zu lassen. Der Benutzer testet selbst wieviel Gewicht er mit den Wiederholungen schafft, die Änderung der Gewichts wird von ihm festgehalten, um positive Entwicklungen feststellen zu k"onnen. 
 	\newline
-	Das Gewicht kann aber auch selbst abgeschätzt werden. Das Gewicht ist dann optimal gewählt, wenn man damit zwischen 10 und 13 Wiederholungen schafft.
+	Das Gewicht kann auch selbst abgeschätzt werden. Das Gewicht ist dann optimal gewählt, wenn man damit zwischen 10 und 13 Wiederholungen schafft.
 	Weiters wird immer auf eine Aufwärmphase hingewiesen, welche man vor jeder Trainingseinheit durchführen muss. Sie besteht aus 5-10 Minuten Laufen und Dehnen.
+	
+	\subsection{Einleitung}
+	Ein Trainingsplan besteht aus unterschiedlichen Phasen - je nach Trainingsziel (Muskelaufbau, Maximalkraft, Kraftausdauer (=Gesundheit)) unterschiedlich. Jede Trainingsphase besitzt einen empfohlenenen RM-Wert (0\%-100\%), mit welchem der Benutzer "uben kann. Alle empfohlenen Werte (Satzpausen, RM-Wert, Anzahl der Trainingstage,...) sind jediglich eine Option für den Benutzer und können auch frei gewählt werden.
+	Dabei zu bedenken ist, dass verschiedene Trainingsphasen bei verschiedenen Trainingsziele eine unterschiedliche Reihenfolge haben.
+	Hier eine Visualisierung der Reihenfolge der Trainingsphasen:
+	\begin{center}
+		\includegraphics[scale=0.4]{img/VisualisierungTrainingsplan}
+	\end{center}
+	
 	\newpage
 	\subsection{Phase 1: Allgemein}
 	Phase 1 ist für jeden gleich, unabhängig vom Trainingsziel, und dient dem Eintrainieren. Am Anfang wird festgehalten, ob der Benutzer einen untrainierten oder bereits trainierten Körper besitzt. Anhand dessen und dem ausgewählten Schema (Bauch - Beine - Po, Oberkörper/Arme, Stabilisation (R"ucken \& Gesundheit)) werden in dieser Phase die "Ubungen ausgewählt und die Anzahl der S"atze/Wiederholungen bestimmt:
@@ -66,7 +73,7 @@
 				\hline
 		\end{tabular}
 	\end{center}
-	In Phase 1 werden alle "Ubungen mit einem Gewicht 55\% RM ausgeführt. Es werden Anfangs 3 Trainingstage ausgewählt, an denen der Benutzer Zeit findet um zu trainieren. Dabei wird beachten, dass zwischen den Trainingstagen mind. 36 Stunden Pause eingelegt werden soll, um den Kreislauf zu schonen. Die empfohlene Satzpause liegt bei 30-60 Sekunden, kann aber auch frei bestimmt werden. \newline 
+	In Phase 1 werden alle "Ubungen mit einem Gewicht 55\% RM ausgeführt. Es werden Anfangs 3 Trainingstage ausgewählt, an denen der Benutzer Zeit findet um zu trainieren. Dabei ist zu beachten, dass zwischen den Trainingstagen mind. 36 Stunden Pause eingelegt werden soll, um den Kreislauf zu schonen. Die empfohlene Satzpause liegt bei 30-60 Sekunden, kann aber auch frei bestimmt werden. \newline 
 	Die Phase 1 dauert bei einem Anfänger 8 Wochen und bei einem Fortgeschrittenen nur die H"alfte.
 	\newline
 	Im "Uberblick:
@@ -85,7 +92,7 @@
 		
 	\newpage	
 	\subsection{Phase 2: Kraftausdauer (Gesundheit)}
-	Phase 2: Kraftausdauer (Gesundheit) besteht aus 2 Phase 1: Allgemein Trainingstagen in der Woche. Zusätzlich besteht das Training aus entweder 1 Mal w"ochentlich Phase 2: Muskelaufbau -training oder 1 Mal w"ochentlich Stabilit"ats"ubungen. Welche der Benutzer ausf"uhren will kann er selbst am Anfang entscheiden, je nachdem ob er seinen K"orper formen will, oder ob er es als Gesundheits- oder Reha"ubung macht.
+	Phase 2: Kraftausdauer (Gesundheit) besteht aus 2 "Phase 1: Allgemein Trainingstagen" in der Woche. Zusätzlich besteht das Training aus entweder ein Mal w"ochentlich Phase 2: Muskelaufbau -training oder ein Mal w"ochentlich Stabilit"ats"ubungen. Welche der Benutzer ausf"uhren will, kann er selbst am Anfang entscheiden, je nachdem ob er seinen K"orper formen will, oder ob er es als Gesundheits- oder Reha"ubung macht.
 	\newline
 	Also im "Uberblick:
 	\newline
@@ -120,7 +127,7 @@
 		
 	\newpage	
 	\subsection{Phase 2: Muskelaufbau \newline Phase 3: Kraftausdauer}	
-	Wenn man als Trainingsziel \grqq{}Muskelaufbau\grqq{} gewählt hat, kommt diese nach Phase 1, oder wenn man Phase 2: Kraftausdauer (Gesundheit) abgeschlossen hat. In dieser Phase kommen viel Hantel- und Seilzugtraining zum Einsatz. Dabei ist zu beachten, dass die Schwierigkeit der "Ubung egal ist. Es wird davon ausgegangen, dass ein Anf"anger nach der 8-w"ochigen Phase 1 bereits fit genug ist, um alle "Ubungen die sich im Trainingskatalog befinden zu meistern. 
+	Wenn man als Trainingsziel \grqq{}Muskelaufbau\grqq{} gewählt hat, kommt diese nach Phase 1, oder wenn man Phase 2: Kraftausdauer (Gesundheit) abgeschlossen hat. In dieser Phase kommt viel Hantel- und Seilzugtraining zum Einsatz. Dabei ist zu beachten, dass die Schwierigkeit der "Ubung egal ist. Es wird davon ausgegangen, dass ein Anf"anger nach der 8-w"ochigen Phase 1 bereits fit genug ist, um alle "Ubungen die sich im Trainingskatalog befinden zu meistern. 
 	\newline
 	Der User kann sich beginnend aussuchen, welche 2-3 Muskelgruppen er trainieren will. Am Phasenanfang wird zwischen Splittraining und Ganzkörpertraining unterschieden. Der Unterschied zwischen den Trainingsarten liegt bei der zeitlichen Ausführung der "Ubungen. Bei dem Splittraining werden "Ubungen zu einer bestimmten Muskelgruppe bei jeder Trainingseinheit durchgeführt. Umgekehrt wird bei dem Ganzk"orpertraining in jeder Trainingseinheit auf einen bestimmte Muskelgruppe geziehlt. 
 	\newline
@@ -141,7 +148,7 @@
 			Phasendauer: & 8 Wochen & 4 Wochen \\ \hline
 		\end{tabular} \\
 	\end{center}
-	Nach Phase 3: Kraftausdauer ist wieder von Anfang an (Phase 1: Allgemein) zu beginnen. Man kann aber auch aufh"ören oder sich einen neuen Trainingsplan generieren lassen.
+	Nach Phase 3: Kraftausdauer ist wieder von Anfang an (Phase 1: Allgemein) zu beginnen. Man kann aber auch aufh"oren oder sich einen neuen Trainingsplan generieren lassen.
 	
 	\newpage
 	\subsection{Phase 2: Maximalkraft \newline Phase 3: Muskelaufbau}
@@ -150,7 +157,7 @@
 	Maximalkraft"ubungen sind immer Ganzk"orper"ubungen.
 	Das empfohlene Trainingsgewicht liegt bei 95\% RM. Dabei kommen ausschließlich Seilzug- und Hantel"ubungen vor (6). Satzdauer beträgt 90-120 Sekunden, bei 3 S"atzen und 5 Wiederholungen. Diese Phase besteht wieder aus 3 Trainingstagen pro Woche und einer Mindesterholungszeit von 48h!
 	\newline
-	Das Maximalkrafttraining besteht aus einem zusätzlichen Schritt, der Mobilisation, der nach dem Aufwärmen beginnt. Danach kann mit dem Training begonnen werden.
+	Das Maximalkrafttraining besteht aus einem zusätzlichen Schritt, der Mobilisation, die nach dem Aufwärmen beginnt. Danach kann mit dem Training begonnen werden.
 	\newline
 	Im "Uberblick:
 		\begin{center}
@@ -189,12 +196,7 @@
 				Phasendauer: & 8 Wochen \\ \hline
 			\end{tabular} 
 		\end{center}
-	Nach Phase 3: Maximalkraft ist der Trainingsplan zu ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
-	
-	\subsection{Visualisierung}
-	\begin{center}
-		\includegraphics[scale=0.4]{img/VisualisierungTrainingsplan}
-	\end{center}
+	Nach Phase 3: Maximalkraft ist der Trainingsplan zu Ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
 	
 	\newpage
 	\subsection{Mobilisation}
@@ -209,9 +211,11 @@
 					Ellbogen & \pbox{10cm}{Die Hände auf die Schulter legen, mit den Ellbogen vorwärts und rückwärts kreisen, die Schultern dabei nach hinten und unten bewegen.}\\ \hline
 					Handgelenk & \pbox{10cm}{Hände kreisen, beide Hände gleichzeitig mit größtmöglichem Bewegungsumfang fortlaufend um die eigene Achse drehen.}\\ \hline
 					Becken-Mob & \pbox{10cm}{Die Arme über den Köpf führen, Handflächen nach oben schieben, Schultern bleiben tief, das Becken im Uhrzeigersinn, den ganzen Bewegungsumfang ausnutzen, Richtung ändern, die Kreise aus der Hüfte führen, die Beine sind stabil.}\\ \hline
-					Wirbelsäule – Seitneigung & \pbox{10cm}{Linken Arm seitwärts hoch heben über den Kopf und Wirbelsäule seitwärts beigen, gegengleich, Handflächen nach oben.}\\ \hline
+					Wirbelsäule – Seitneigung & \pbox{10cm}{Linken Arm seitwärts hoch heben über den Kopf und Wirbelsäule seitwärts beugen, gegengleich, Handflächen nach oben.}\\ \hline
 					Wirbelsäule – Rotation & \pbox{10cm}{Bauchnabel nach innen ziehen, die Arme in U-Form anheben, Daumen zeigen nach hinten und sind leicht nach außen gedreht, den Oberkörper vorbeugen, Gesäß nach hinten und zur Seite drehen, zur Mitte kommen, zur anderen Seite drehen, zur Mitte, immer im Wechsel, der Rücken bleibt gestreckt, die Schulterblätter sind zusammengezogen, das Becken bleibt stabil.}\\ \hline
 					Wirbelsäule – Rolldown & \pbox{10cm}{Aufrechter Stand, den Kopf Richtung Brustbein senken, Bauchnabel nach innen ziehen, einatmen und beim Ausatmen die Wirbelsäule Wirbel für Wirbel in Richtung Boden abrollen , einatmen und wieder Wirbel für Wirbel aufrollen, der Rücken ist locker, der Nacken ist entspannt.}\\ \hline
 				\end{tabular} 
 			\end{center}
+
+[\citetitle{tplantheorie} \cite{tplantheorie}]
 \end{document}
