--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,5 +1,47 @@
 % Encoding: UTF-8
 
+@Misc{promteil1,
+	title = {Möglichkeiten der App Vermarktung: Teil 1},
+	month = apr,
+	year = {2015},
+	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
+}
+
+@Misc{promteil2,
+	title = {Möglichkeiten der App Vermarktung: Teil 2},
+	month = may,
+	year = {2015},
+	url = {http://www.app-entwicklung.info/2015/05/moglichkeiten-der-app-vermarktung-teil-2-die-app-store-optimierung-aso/}
+}
+
+@Misc{tplantheorie,
+	title = {Fachkonzept zur Erstellung eines Trainingsplans},
+	month = jan,
+	year = {2016},
+	url = {https://www.facebook.com/Lindenpower-Fitness-174332482640559/}
+}
+
+@Misc{datbshowcase,
+	title = {Data Binding Guide},
+	month = mar,
+	year = {2016},
+	url = {http://developer.android.com/tools/data-binding/guide.html}
+}
+
+@Misc{datbusing,
+	title = {Droidcon NYC 2015 - Data Binding Techniques},
+	month = sep,
+	year = {2015},
+	url = {https://www.youtube.com/watch?v=WdUbXWztKNY}
+}
+
+@Misc{datbdef,
+	title = {DataBinding Definition},
+	month = mar,
+	year = {2016},
+	url = {https://www.it-visions.de/glossar/alle/6875/Data_Binding.aspx}
+}
+
 @Misc{adAdministerBilling,
   title = {In-App-Billing},
   month = feb,
