--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
@@ -5,6 +5,7 @@
 \begin{document}
 \subsection{Promotion}
 Es gibt dutzende Mittel um eine Android Applikation zu vermarkten. Ob über das Internet oder durch klassische physische Varianten lässt sich am Besten über Zielgruppenorientatierung bestimmen. 
+[\citetitle{promteil1} \cite{promteil1}]
 
 \subsubsection{Website}
 Ein gute Methode um eine positive Reputation für seine Applikation zu schaffen ist es eine Website zu erstellen. Sie soll die Besucher einen kurzen Einblick in das Projekt und die Applikation bieten. Damit kann man bereits vor der Veröffentlichung eine positive Reputation schaffen und Benutzer an Land ziehen, bevor das Produkt überhaupt auf dem Markt ist. Eine solche Teaser-Website sollte nur mit den minimalistischen Beschreibungen der Hauptfunktionen verkleidet werden, ein einfaches Design haben und einen guten Überblick über das Endprodukt aufzeigen: Als Beispiel Die Website der Applikation Instagram:
@@ -54,8 +55,10 @@ Bei der Einrichtung muss speziell auf die Länge des Titels, Beschreibung und Na
 Das Icon sollte möglichst minimalistisch gehalten werden. Der Benutzer assoziiert Farbschemas und Formen des Icons automatisch mit der Applikation, welche möglichst simple und mit der modernen Designrichtlinie "Weniger ist mehr" umgesetzt werden soll. 
 \newline
 Bei der Einbettung von Medien im Google Playstore sollten die nützlichsten und besten Aspekte und Funktionen der Applikation widergegeben werden. Screenshots mit wenig Aussagekraft sollte vermieden werden, da es ein Limit für eingebundenen Medien für das Appprofil gibt und diese möglichst effizient genutzt werden sollten.
+[\citetitle{promteil2} \cite{promteil2}]
 
 \subsubsection{Fazit}
 \begin{quote}Grundsätzlich kann gesagt werden, dass man sich bei der Bewerbung einer App nicht nur auf die Optimierungsmöglichkeiten im Store verlassen sollte. Es muss in Bezug auf Werbung vielmehr ein ganzheitlicher Ansatz gewählt werden, der schon vorab – also vor Veröffentlichung der App – bei den potenziellen Nutzern einen Anreiz zum Download schafft. Das Wichtigste ist allerdings, seine Annahmen und Maßnahmen regelmäßig auf deren Wirksamkeit und Erfolg hin zu prüfen und gegebenenfalls zu optimieren bzw. im Fall der Fälle auch gänzlich zu überdenken.\end{quote}
+
 
 \end{document}
