added specification into latex project (17 pages)

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,6 +10,9 @@
 \tableofcontents
 
 \newpage
+\subfile{bersenkowitsch_pflichtenheft}
+
+\newpage
 \subfile{bersenkowitsch_guiessay} %%%% not yet approved
 
 \newpage
