--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -128,3 +128,11 @@
   year =  {2016},
   url =   {https://www.youtube.com/watch?v=W1JE-jUisVU}
 }
+
+@Misc{clickableAreas
+  author = {{Bill Lahti}},
+  title = {Android Images With Clickable Areas – Part 1},
+  month = mar,
+  year = {2016},
+  url =   {https://blahti.wordpress.com/2012/06/26/images-with-clickable-areas/}
+}
