Added NavigationDrawerDoc and GithubDoc

--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -79,6 +79,14 @@
   url =    {http://blog.teamtreehouse.com/add-navigation-drawer-android}
 }
 
+@Misc{bNavDrawerRT,
+  author = {Ravi Tamada},
+  title =  {Android Sliding Menu using Navigation Drawer},
+  month =  mar,
+  year =   {2016},
+  url =    {http://www.androidhive.info/2013/11/android-sliding-menu-using-navigation-drawer/}
+}
+
 @Misc{bPermissions,
   title = {Everything every Android Developer must know about new Android's Runtime Permission},
   month = mar,
@@ -114,6 +122,13 @@
   url =   {https://developers.google.com/admob/android/interstitial}
 }
 
+@Misc{github,
+  title = {GitHub},
+  month = mar,
+  year =  {2016},
+  url =   {https://github.com/}
+}
+
 @Misc{gpDevContentPolicy,
   title = {Google Play-Programmrichtlinien},
   month = feb,
@@ -126,6 +141,14 @@
   month = feb,
   year =  {2016},
   url =   {https://support.google.com/googleplay/android-developer/answer/6151557}
+}
+
+@Misc{t3nGithub,
+  author = {Moritz Stückler},
+  title =  {Was ist eigentlich dieses GitHub?},
+  month =  mar,
+  year =   {2016},
+  url =    {http://t3n.de/news/eigentlich-github-472886/}
 }
 
 @Misc{wMusicDroid,
