exporting cvs & email sending with attachment added (3pages)

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -34,6 +34,9 @@
 \subfile{denkmayr_NavigationDrawer} %%%% not yet approved
 
 \newpage
+\subfile{bersenkowitsch_export} % wird kontrolliert
+
+\newpage
 \section{Commercialization}
 \subfile{denkmayr_Donations} % wird kontrolliert
 \newpage
