--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,9 +1,30 @@
 % Encoding: UTF-8
 
+@Misc{exportCSVSourceWrite,
+	title = {Vgl.: OpenCSV Writer},
+	month = mar,
+	year = {2016},
+	url = {http://viralpatel.net/blogs/java-read-write-csv-file/}
+}
+
+@Misc{exportCSVSourceRead,
+	title = {Vgl.: OpenCSV Website},
+	month = mar,
+	year = {2016},
+	url = {http://opencsv.sourceforge.net/}
+}
+
 @Misc{promteil1,
 	title = {Möglichkeiten der App Vermarktung: Teil 1},
 	month = apr,
-	year = {2015},
+	year = {2016},
+	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
+}
+
+@Misc{promteil1,
+	title = {Möglichkeiten der App Vermarktung: Teil 1},
+	month = apr,
+	year = {2016},
 	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
 }
 
